<resources>
    <string name="app_name">SDOS</string>

    <string name="activity_login_button">Login</string>
    <string name="activity_login_username">Usuario</string>
    <string name="activity_login_password">Password</string>
    <string name="activity_login_error_message">Incorrecto</string>
    <string name="activity_login_success_message">Bienvenido!</string>
    <string name="dialog_create_task_descripción">Descripción de la tarea</string>
    <string name="dialog_create_task_duration">Horas</string>
    <string name="dialog_create_button_ok">Crear Tarea</string>
    <string name="dialog_create_button_dismiss">Cancelar</string>
    <string name="fragment_employee_save">Guardar estado</string>

    <string name="fragment_home_button_view_tasks">Ver Mis Tareas</string>
    <string name="fragment_home_button_create_task">Crear Tarea</string>
    <string name="fragment_home_button_web_service">Web Service</string>
    <string name="fragment_home_button_logout">Logout</string>

</resources>